--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "rng-bot",
   "version": "1.0.0",
   "description": "A Discord bot to roll dice for you",
+  "engine": ">=10.15.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node ."
   },
   "keywords": [
     "discord",
